--- a/drivers/gpu/arm/Kconfig
+++ b/drivers/gpu/arm/Kconfig
@@ -1,5 +1,5 @@
 #
-# (C) COPYRIGHT 2012 ARM Limited. All rights reserved.
+# (C) COPYRIGHT 2017 Rockchip Electric Co., LTD. All rights reserved.
 #
 # This program is free software and is provided to you under the terms of the
 # GNU General Public License version 2 as published by the Free Software
@@ -11,9 +11,15 @@
 # Boston, MA  02110-1301, USA.
 #
 #
+#
+menu "ARM Utgard GPU Configuration"
+source "drivers/gpu/arm/mali400/mali/Kconfig"
+endmenu
 
-
-
-menu "ARM GPU Configuration"
+menu "ARM Midgard GPU Configuration"
 source "drivers/gpu/arm/midgard/Kconfig"
+endmenu
+
+menu "ARM Midgard GPU Configuration (for Linux)"
+source "drivers/gpu/arm/midgard_for_linux/Kconfig"
 endmenu
